- Fixed bug #42107 (sscanf broken when using %2$s type format parameters)